--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/cities
 spring.datasource.username=postgres_user_city
 spring.datasource.password=super_password
+
+spring.jpa.show-sqç=true
+
+spring.jpa.properties.hibernate.format.sql=true
